[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mumble"
version = "0.2.0"
description = "Finding the perfect modification for your mass shift"
readme = "README.md"
keywords = [
    "Modification",
    "Mass Shift",
    "Mapping",
]
authors = [{ name = "Arthur Declercq", email = "Arthur.Declercq@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click >= 8.0.1",
    "rich >= 13.0.0",
    "pyteomics >= 4.7.3",
    "pandas >= 1.5.0",
    "psm_utils >= 0.9.0",
    "numpy >= 1.23.0",
    "rustyms >= 0.8.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["ruff", "black", "pytest", "pre-commit", "bumpver"]

[project.scripts]
mumble = "mumble.__main__:main"

[tool.black]
line-length = 99
target-version = ['py38']

[tool.ruff]
line-length = 99
target-version = 'py38'

[tool.ruff.lint]
extend-select = ["T201", "T203"]

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"mumble/__init__.py" = ['__version__ = "{version}"']
